Fixed logo and text layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,6 @@ body {
 
 .custom_anime .letter,
 .anime .letter {
-  display: inline-block;
+  display: inline;
   line-height: 1em;
 }
